--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,12 +9,12 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../Builds/OmoriSandbox.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
-encrypt_pck=true
+encrypt_pck=false
 encrypt_directory=true
 script_export_mode=2
 
@@ -39,14 +39,14 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="EBro912"
+application/product_name="OmoriSandbox"
 application/file_description=""
-application/copyright=""
+application/copyright="EBro912"
 application/trademarks=""
 application/export_angle=0
-application/export_d3d12=0
-application/d3d12_agility_sdk_multiarch=true
+application/export_d3d12=2
+application/d3d12_agility_sdk_multiarch=false
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
