update default config

--- a/assets/default_config.ini
+++ b/assets/default_config.ini
@@ -43,17 +43,26 @@
 ; which equates to "%APPDATA%\Godot\app_userdata\OmoriSandbox\custom\"
 ; This folder must be created manually. See the "Customization" section on GitHub for more information.
 custom_path="user://custom"
+
 ; The BGM to use for the battle. Uses internal filenames for vanilla BGM.
 ; Refer to (https://github.com/EBro912/OmoriSandbox/tree/master/audio/bgm) for BGM names.
 ; Example: "battle_vf" would be Tussle Among Trees
 bgm="boss_sweetheart"
+
 ; The Battleback to use for the battle. Uses internal filenames for vanilla Battlebacks.
 ; Refer to (https://github.com/EBro912/OmoriSandbox/tree/master/assets/battlebacks) for Battleback names.
 ; Example: "battleback_sw_sweetheart" would be the battleback for the Sweetheart fight
 battleback="battleback_sw_sweetheart"
 
-snacks = []
-toys = []
+; The snacks the party has in their inventory. Follows the format of "Item Name":quantity
+; Leave as an empty dictionary {} to start with no snacks.
+; Example: {"Chocolate":3, "Life Jam":1}
+snacks={"Nachos":2, "Life Jam":2, "Fries":2, "Apple Juice":2, "Banana Smoothie":2}
+
+; The toys the party has in their inventory. Follows the format of "Item Name":quantity
+; Leave as an empty dictionary {} to start with no toys.
+; Example: {"Jacks":3, "Confetti":1}
+toys={"Jacks":2, "Rubber Band":2, "Air Horn":2, "Rain Cloud":2, "Confetti":1}
 
 ; ##########
 ; # Actors #
@@ -129,6 +138,6 @@ name="Sweetheart"
 ; The position on the screen to spawn the enemy, relative to the center of the enemy's sprite.
 ; (0,0) is the top left of the screen, and (640, 480) is the bottom right.
 ; Enemies will overlap in the order that they are spawned. (This will be configurable in the future)
-position=Vector2(320,240)
+position=Vector2(320,275)
 ; The enemy's starting emotion. May break some enemies that do not support certain emotions.
 emotion="neutral"
