--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -42,7 +42,7 @@ application/product_version="0.1.0.0"
 application/company_name="EBro912"
 application/product_name="OmoriSandbox"
 application/file_description=""
-application/copyright="EBro912"
+application/copyright=""
 application/trademarks=""
 application/export_angle=0
 application/export_d3d12=2
@@ -65,5 +65,5 @@ ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debu
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
 dotnet/include_scripts_content=false
-dotnet/include_debug_symbols=false
+dotnet/include_debug_symbols=true
 dotnet/embed_build_outputs=false
