--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.ini, *.json"
 exclude_filter=""
 export_path="../../Builds/OmoriSandbox.exe"
 patches=PackedStringArray()
