add missing followup tiers + bugfixes

--- a/assets/default_config.ini
+++ b/assets/default_config.ini
@@ -54,6 +54,10 @@ bgm="boss_sweetheart"
 ; Example: "battleback_sw_sweetheart" would be the battleback for the Sweetheart fight
 battleback="battleback_sw_sweetheart"
 
+; The Followup Tier to use for the battle
+; Valid values are 1, 2, or 3
+followup_tier = 2
+
 ; The snacks the party has in their inventory. Follows the format of "Item Name":quantity
 ; Leave as an empty dictionary {} to start with no snacks.
 ; Example: {"Chocolate":3, "Life Jam":1}
